--- a/php-fpm/laravel.ini
+++ b/php-fpm/laravel.ini
@@ -1,7 +1,7 @@
-date.timezone=UTC
+date.timezone="Asia/Seoul"
 display_errors=Off
 log_errors=On
-
+short_open_tag=On
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
 memory_limit = 128M
